# Chembot

./: README.md
mecbot_description/: CMakeLists.txt  package.xml
mecbot_description/launch/: mecbot_display.launch  simple_mecbot_display.launch
mecbot_description/meshes/: camera.STL  imu.STL  laser1.STL  laser2.STL  left_back_wheel.STL  left_front_wheel.STL  right_back_wheel.STL  right_front_wheel.STL
mecbot_description/meshes_simple/: laser.STL
mecbot_description/urdf/: gazebo插件暂存.txt  mecbot.urdf.xacro  mecbot_fix.urdf.xacro  simple_mecbot.urdf.xacro
mecbot_driver_pkg/: CMakeLists.txt  package.xml  tty_USB.rules  tty_mecbot.sh
mecbot_driver_pkg/config/: mapping.rviz  mecbot_cartographer.lua  mecbot_cartographer_test.lua  odom_catergrapher.lua
mecbot_driver_pkg/launch/: 00_cartographer_odom.launch  01_mecbot_setup.launch  02_cartographer_mapping.launch  03_navigation.launch  03_navigation.launch(3)  04.sh  04_mecbot_with_arm_setup.launch  05_move_odom.launch  06_mecbot_with_arm_setup.launch  10_mecbot_setup_simple.launch  11_mecbot_setup.launch  12_cartographer_odom.launch  13_chassis_nav.launch  14_chassis_map.launch  amcl(origin).launch  amcl.launch  amcl_cat(另一个复件).launch  amcl_cat(复件).launch  amcl_cat.launch  map_server.launch  mecbot_key.launch  odom_cat.yaml  robot_navigation.launch  robot_pose_ekf.launch  无标题文档 1
mecbot_driver_pkg/launch/include/: 0robot_pose_ekf.launch  Amcl.launch  Move_base.launch  double_laser.launch  hector_mapping.launch
mecbot_driver_pkg/map/: map100.pgm  map100.yaml  map101.pgm  map101.yaml  map102.pgm  map102.yaml  map103.pgm  map103.yaml  map104.pgm  map104.yaml  map105.pgm  map105.yaml  map106.pgm  map106.yaml  map107.pgm  map107.yaml  map20.pgm  map20.yaml  map200.pgm  map200.yaml  map3.pgm  map3.yaml  map4.pgm  map4.yaml  map40.pgm  map40.yaml  map5.pgm  map5.yaml  map50.pgm  map50.yaml  map6.pgm  map6.yaml  map7.pgm  map7.yaml
mecbot_driver_pkg/param/: dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
mecbot_driver_pkg/param_test/: base_local_planner_params.yaml  costmap_common_global_params.yaml  costmap_common_local_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
mecbot_driver_pkg/scripts/: mecbot_teleop_keyboard.py
mecbot_driver_pkg/src/: map_tf.cpp  mecbot_driver(lock_0624).cpp  mecbot_driver(origin).cpp  mecbot_driver(unlock).cpp  mecbot_driver(化院修改前最终版).cpp  mecbot_driver-2023-07-17.cpp  mecbot_driver.cpp  mecbot_driver3.23.cpp  mecbot_driver（未加xiefangcha).cpp  nav_simple_goal.cpp  odom_cat.cpp  odom_laser.cpp  odom_listener.cpp  odom_listener_new.cpp  odom_xyz.cpp  pointcloud_filter.cpp  write_to_file.cpp
move/: CMakeLists.txt  package.xml
move/src/: chemical_move.cpp  monitor2.cpp  navigation.cpp  navigation.h  navigation_0705.cpp  navigation_0707.cpp  navigation_0708.cpp  navigation_0708.h  navigation_0724.cpp  navigation_main.cpp
ps2_joy_control_pkg/: CMakeLists.txt  package.xml
ps2_joy_control_pkg/launch/: ps2_joy_control.launch  ps2_joy_data.launch
rplidar_ros/: CMakeLists.txt
rplidar_ros/launch/: wheeltec_lidar.launch
rplidar_ros/rviz/: rplidar.rviz
rplidar_s1_detect/: CMakeLists.txt  package.xml
rplidar_s1_detect/config/: laser.rviz  s1_location_catergrapher.lua  s1_mapping_cartographer.lua
rplidar_s1_detect/launch/: 00_map_save.sh  01_s1_map.launch  02_s1_cartographer_odom.launch  03_s1_axis_to_pointcloud.launch  amcl_catergrapher.launch  map_server.launch
rplidar_s1_detect/map/: map01.pgm  map01.yaml  map2.pgm  map2.yaml
rplidar_s1_detect/meshes/: base_link.STL  laser_link.STL
rplidar_s1_detect/src/: axis_to_pointcloud.cpp  detect.cpp  map_to_axis.cpp  odom_cartographer.cpp  pointcloud_to_map2.cpp  pointcloud_to_mapx.cpp
rplidar_s1_detect/urdf/: S1_HAND_HELD.urdf
