<package>
  <name>mecbot_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Mbot200</p>
    <p>This package contains configuration data, 3D models and launch files
for mecbot_description robot</p>
  </description>

  <author>zhong</author>
  <maintainer email="1142790610@qq.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>

  <export>
    <architecture_independent />
  </export>
</package>
